@@ -74,7 +74,6 @@ JHtml::_('behavior.formvalidation');
 				<?php echo $this->form->getLabel('image'); ?>
 				<?php echo $this->form->getInput('image'); ?>
 
-
 				<?php echo $this->form->getLabel('con_position'); ?>
 				<?php echo $this->form->getInput('con_position'); ?>
 
@@ -101,6 +100,9 @@ JHtml::_('behavior.formvalidation');
 
 				<?php echo $this->form->getLabel('mobile'); ?>
 				<?php echo $this->form->getInput('mobile'); ?>
+				
+				<?php echo $this->form->getLabel('fax'); ?>
+				<?php echo $this->form->getInput('fax'); ?>
 
 				<?php echo $this->form->getLabel('webpage'); ?>
 				<?php echo $this->form->getInput('webpage'); ?>
