@@ -112,6 +112,8 @@ COM_CONTACT_FIELD_INFORMATION_COUNTRY_DESC="Contact's Country"
 COM_CONTACT_FIELD_INFORMATION_COUNTRY_LABEL="Country"
 COM_CONTACT_FIELD_INFORMATION_EMAIL_DESC="Contact's Email"
 COM_CONTACT_FIELD_INFORMATION_EMAIL_LABEL="Email"
+COM_CONTACT_FIELD_INFORMATION_FAX_LABEL="Fax"
+COM_CONTACT_FIELD_INFORMATION_FAX_DESC="Contact's Fax"
 COM_CONTACT_FIELD_INFORMATION_MISC_DESC="Contact's Miscellaneous Information"
 COM_CONTACT_FIELD_INFORMATION_MISC_LABEL="Other Information"
 COM_CONTACT_FIELD_INFORMATION_MOBILE_DESC="Contact's Mobile phone"
